fix: minor spacing details in home

--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
   --clr-neutral-900: hsl(0, 0%, 15%);
 
   --ff-primary: "Montserrat", sans-serif;
+  --ff-secondary: "Calibri", sans-serif;
 
-  --ff-body: var(--ff-primary);
+  --ff-body: var(--ff-secondary);
   --ff-heading: var(--ff-primary);
 
   --fw-regular: 500;
@@ -27,7 +28,7 @@
   --fs-800: 2.5rem;
   --fs-900: 3.5rem;
 
-  --fs-body: var(--fs-400);
+  --fs-body: var(--fs-700);
   --fs-primary-heading: var(--fs-800);
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-600);
@@ -53,6 +54,13 @@
     --fs-nav: var(--fs-500);
     --padding-general: 4rem;
   }
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--ff-heading);
+  font-weight: var(--fw-bold);
 }
 
 /* Box sizing rules */
@@ -193,7 +201,7 @@ select {
 
 .logo {
   width: 22.5vw;
-  max-width: 130px;
+  max-width: 200px;
 }
 
 .hero-text{
@@ -255,8 +263,9 @@ select {
 
 
 .nav-wrapper {
+  font-family: var(--ff-primary);
   border-top: 2px solid var(--clr-primary-300);
-  padding: 1.5rem;
+  padding: 0rem 1rem 1rem 1rem;
 
   display: flex;
   align-items: center;
@@ -301,7 +310,7 @@ select {
 
 .nav-list {
   display: flex;
-  gap: clamp(2rem, 4rem, 6rem)
+  gap: clamp(1rem, 2rem, 4rem)
 }  
 
 .nav-list::last-child {
@@ -397,7 +406,8 @@ select {
 }
 
 .content-box-item h3 {
-  font-size: var(--fs-500);
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-600);
 }
 
 .content-box-item:last-child::after,
@@ -458,7 +468,7 @@ select {
   flex-wrap: wrap;
   flex-direction: column;
 
-  padding: var(--padding-general);
+  padding: 0 var(--padding-general) 2.5rem var(--padding-general);
 }
 
 .carousel-images {
@@ -531,6 +541,7 @@ select {
 
 
 .info-video-columns {
+  padding: var(--padding-general) 0rem var(--padding-general) 0rem;
   display: grid;
   justify-items: center;
   gap: 1rem;
@@ -561,8 +572,9 @@ select {
 
 
 .info-image img{
-  width: 80%;
-  max-height: 300px;
+  width: 100%;
+  max-width: 500px;
+  height: auto;
   padding-bottom: 2rem;
 }
 
@@ -582,12 +594,25 @@ select {
 }
 
 .info-video-text{
+
   position: relative;
-  padding:  0rem var(--padding-general) 0rem 0rem;
+  padding:  0rem var(--padding-general) 0rem var(--padding-general);
 }
 
 .info-video-text h3 {
+  text-decoration: underline var(--clr-primary-300);
   font-size: var(--fs-700);
+  position: relative;
+}
+
+.info-video-text h3::after{
+  position: absolute;
+  content: "";
+  height: 1px;
+  width: 10px;
+  bottom: 10px;
+  color: var(--clr-primary-300);
+  z-index: 1;
 }
 
 .inline-title {
@@ -631,7 +656,7 @@ select {
 }
 
 .why-us-section h2 span {
-  color: var(--clr-primary-900);
+  color: var(--clr-neutral-100);
 }
 
 .subtitle {
@@ -643,7 +668,7 @@ select {
 .description {
   max-width: 600px;
   margin: 0 auto 2rem;
-  font-size: 1.25rem;
+  font-size: var(--fs-body);
 }
 
 .why-us-cards {
@@ -703,14 +728,20 @@ select {
 
 
 .decoration-home{
-  background: url(media/images/Foto\ Carrusel\ 3\ Inicio.png) no-repeat;
+  background: url(media/images/foto-frase-inicio.png) no-repeat;
   background-size: cover;
 }
 
 .text-container{
   text-align: center;
+  margin: 5rem;
   padding: 3rem 10rem 3rem 10rem;
 }
+
+.text-container h2{
+  font-family: var(--ff-primary);
+}
+
 
 @media (max-width:50em){
   .text-container{
@@ -835,6 +866,7 @@ select {
 
 
   .cta-columns{
+  max-height: fit-content;
   display: grid;
   grid-template-columns: 1fr 2.5fr 1fr;
   gap: 1rem;
@@ -851,20 +883,31 @@ select {
   }
 
 .text-box{
+  line-height: 1;
   padding: 1rem;
 }
 
+.text-box p{
+  font-size: 1.5rem;
+}
+
+.text-box-parr{
+  font-style: italic;
+  font-size: var(--fs-700);
+  margin-top: 3.5rem;
+}
+
 .text-box h2{
+  
   padding-bottom: 0.5rem;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
-  font-family: var(--ff-body);
 }
 
 .cta-columns .primary-button{
   position: absolute;
-  bottom: 10%;
-  right: 5%;
+  bottom: 5%;
+  right: 1%;
 }
 
 
@@ -910,6 +953,7 @@ select {
   color: var(--clr-neutral-100);
   font-size: var(--fs-secondary-heading);
   font-weight: var(--fw-bold);
+  text-decoration: underline var(--clr-primary-300);
 }
 
 .contact-form button{
@@ -918,12 +962,15 @@ select {
 }
 
 .contact-banner{ 
+  z-index: 1;
+  font-size: 17px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   position: relative;
   justify-content: center;
   max-width: 300px;
-  max-height: 150px;
+  max-height: 300px;
   margin: 1rem;
   padding: 5px;
   background: var(--clr-primary-300);
@@ -938,11 +985,15 @@ select {
     width: 100%;  /* Size of the square */
     height: 100%; /* Same as width to make it a square */
     border: 4px solid var(--clr-primary-300);
-    z-index: 1; /* Behind the media element */
+    z-index: -1; /* Behind the media element */
 }
 
 .banner-icons{
+  
+  margin: 2rem;
   display: grid;
+  align-items: start;
+  justify-items: start;
   gap: 5px;
   grid-template-columns: 0.1fr 1fr;
   grid-template-rows: 0.1fr 1fr;
@@ -962,10 +1013,16 @@ select {
 }
 
 .form .name input{
+  padding: 0.21rem;
   width: 96%;
 }
 .form .email input{
+  padding: 0.2rem;
   width: 96%;
+}
+
+.form-button{
+  margin-left: 78%;
 }
 
 
@@ -1012,8 +1069,8 @@ select {
 
 }
 
-.copyright{
-  padding: var(--padding-general);
+.inline-logo{
+  color: var(--clr-neutral-100);
 }
 
 /*utility classes*/
